# project-kb

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  LICENSE.txt  Makefile  NOTICE.txt  README.md  REUSE.toml  all_references.bib  dataset.csv  go.mod  go.sum  import_vulas_kb.sh  index.html  kb.csv  mkdocs.yml  sitemap.xml  vulas_db.csv  vulnerability_populator.py
prospector/: .env  .env-sample  .flake8  .pre-commit-config.yaml  .pylintrc  Makefile  Pipfile  README.md  claude.md  config-sample.yaml  config.yaml  database.py  docker-clean.sh  docker-compose.yml  filter.py  index.html  legacy_cli.py  legacy_cli_streamlit.py  legacy_database.py  legacy_filter.py  legacy_rank.py  main.py  prospector.conf  prospector_interface.py  pyproject.toml  rank.py  requirements-dev.txt  requirements.in  requirements.txt  run_prospector.sh  test_report.json
prospector/SLAB/: SLAB Ideas.md
prospector/advisory_processor/: advisory_processor.py  advisory_processor_test.py
prospector/api/: __init__.py  api_test.py  dependencies.py  main.py
prospector/backenddb/: README.md  __init__.py  commitdb_test.py  postgres.py
prospector/cli/: README.md  cli.py  console.py  main.py  prospector_client.py
prospector/client/: SLAB Ideas.md
prospector/commit-preprocessor/: SLAB Ideas.md
prospector/commit_preprocessor/: preprocessor.py  test_preprocessor.py
prospector/commit_processor/: feature_extractor.py  preprocessor.py  requests_filter.py  similarity.py  test_feature_extractor.py  test_preprocessor.py
prospector/commitdb/: README.md  __init__.py  commitdb_test.py  postgres.py
prospector/core/: prospector.py  prospector_test.py  report.py  report_test.py
prospector/data/: project_metadata.json  prospector-commits.db  prospector-vulnerabilities.db
prospector/data_sources/: test.csv
(+1800 files in other folders)
